--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,25 @@ project(ex2)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
+include(DownloadProject)
+download_project(
+    PROJ         libigl
+    SOURCE_DIR   ${CMAKE_CURRENT_SOURCE_DIR}/external/libigl
+    DOWNLOAD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/.cache/libigl
+    GIT_REPOSITORY https://github.com/libigl/libigl.git
+    GIT_TAG        e699d257fe860d4fd82709835e72438bd0cd1533
+)
+
 # libigl options: choose between header only and compiled static library
 # Header-only is preferred for small projects. For larger projects the static build
 # considerably reduces the compilation times
 option(LIBIGL_USE_STATIC_LIBRARY "Use LibIGL as static library" OFF)
 
-# add a customizable menu bar
-option(LIBIGL_WITH_NANOGUI     "Use Nanogui menu"   ON)
-
 # libigl options: choose your dependencies (by default everything is OFF except opengl) 
 option(LIBIGL_WITH_VIEWER      "Use OpenGL viewer"  ON)
 option(LIBIGL_WITH_OPENGL      "Use OpenGL"         ON)
 option(LIBIGL_WITH_OPENGL_GLFW "Use GLFW"           ON)
+option(LIBIGL_WITH_OPENGL_GLFW_IMGUI "Use ImGui"    ON)
 option(LIBIGL_WITH_BBW         "Use BBW"            OFF)
 option(LIBIGL_WITH_EMBREE      "Use Embree"         OFF)
 option(LIBIGL_WITH_PNG         "Use PNG"            OFF)
@@ -42,4 +49,4 @@ else (TRAVISCI_BUILD)
 endif (TRAVISCI_BUILD)
 
 add_executable(${PROJECT_NAME}_bin ${SOURCES} ${LIBIGL_EXTRA_SOURCES})
-target_link_libraries(${PROJECT_NAME}_bin igl::core igl::viewer)
+target_link_libraries(${PROJECT_NAME}_bin igl::core igl::opengl igl::opengl_glfw igl::opengl_glfw_imgui)
